[project]
name = "diffusion-comparision"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "bitsandbytes>=0.49.0",
  "datasets>=4.4.2",
  "diffusers>=0.36.0",
  "einops>=0.8.1",
  "hydra-core>=1.3.2",
  "ipynotebook>=0.1.0",
  "lightning>=2.6.0",
  "matplotlib>=3.10.8",
  "omegaconf>=2.3.0",
  "timm>=1.0.22",
  "torch>=2.5.1",
  "torchmetrics[image]>=1.8.2",
  "torchvision>=0.20.1",
  "transformers>=4.57.3",
  "wandb>=0.23.1",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
